--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -6,6 +6,7 @@
     padding: 8px 23px;
     font-size: 1.6rem;
     font-weight: 700;
+    font-family: 'ProximaNova', sans-serif;
     background-color: var(--white);
     border: 1px solid transparent;
     cursor: pointer;
